记录本体项目代码修改部分

--- a/docs/views/numerology/2025-02-10-CTFLearn.md
+++ b/docs/views/numerology/2025-02-10-CTFLearn.md
@@ -47,6 +47,17 @@ publish: true
 
 # 第28章：信息打点-Web应用&企业产权&指纹识别&域名资产&网络空间&威胁情报
 
+
+
+## 知识点
+
+1. 业务资产-应用类型分类
+2. Web单域名获取-接口查询
+3. Web子域名获取-解析枚举
+4. Web架构资产-平台指纹识别
+
+
+
 ## 工具安装-OneForAll
 
 **环境准备：**
