--- a/docs/views/numerology/2025-02-14-CTFLearn.md
+++ b/docs/views/numerology/2025-02-14-CTFLearn.md
@@ -45,3 +45,81 @@ publish: true
 <!-- more -->
 
 # 第28章：信息打点-JS架构&框架识别&泄露提取&API接口枚举&FUZZ爬虫&插件项目
+
+### 案例演示-自动化项目分析
+
+#### 📍浏览器插件-FindSomething
+
+- FindSomething：基于浏览器插件的被动式信息提取工具
+
+  ![image-20250213230840420](/img/ctfLearn/image-20250213230840420.png)
+
+- 【[GitHub FindSomething: 基于chrome、firefox插件的被动式信息泄漏检测工具](https://github.com/momosecurity/FindSomething)】【[FindSomething - Chrome 应用商店](https://chromewebstore.google.com/detail/findsomething/kfhniponecokdefffkpagipffdefeldb)】
+
+- 工具作用：可以从网页的HTML源代码或JavaScript中快速提取有价值的信息，如资源、接口URL、IP地址、域名，以及身份证号、手机号、邮箱等敏感信息，便于安全研究者和IT专业人员检测信息泄露风险‌
+
+  ![image-20250215194210564](/img/ctfLearn/image-20250215194210564.png)
+
+- 能明显看到需要的路径、隐私信息等。
+
+
+
+#### 📍Python工具-JSFinder
+
+- JSFinder是一个用于从网站的JavaScript文件中提取URL和子域名的工具。它支持简单爬取和深度爬取，可以指定保存结果的文件名。使用方法包括通过命令行输入URL进行爬取，或者读取包含URL或JS的文本文件。此外，还可以设置cookie爬取受保护的页面，并将结果分别保存到URL和子域名的文件中。返回结果为相对或绝对URL，取决于是否指定了JS文件。
+
+- ![image-20250215195643042](/img/ctfLearn/image-20250215195643042.png)
+
+- 【[GitHub JSFinder](https://github.com/Threezh1/JSFinder)】
+
+- 使用方法：
+
+  ```
+  python JSFinder.py -u https://e-oss.longi.com:8014/userSpace/login
+  ```
+
+  通过返回的信息，去逐项测试。
+
+
+
+#### 📍Go工具-URLFinder（JSFinder升级版）
+
+- URLFinder 是一款由 pingc0y 开发的开源项目，主要用于快速、全面地提取网页中的 JavaScript、URL 和敏感信息。该项目的主要编程语言是 Go，这使得它能够在多种操作系统上高效运行，包括 Windows、Linux 和 macOS。
+
+- ![image-20250215202131774](/img/ctfLearn/image-20250215202131774.png)
+
+- 【[GitHub URLFinder](https://github.com/pingc0y/URLFinder)】
+
+- 使用方法：
+
+  ```
+  URLFinder.exe -u https://e-oss.longi.com:8014/userSpace/login -s all -m 3
+  ```
+
+  ![image-20250215202758979](/img/ctfLearn/image-20250215202758979.png)
+- 这个工具好用的地方就是在这个会有颜色标识。像是以下图中是返回的标题是“安全中心”，如果说有不是安全中心的，说明就是挖到了：
+
+  ![image-20250215203106114](/img/ctfLearn/image-20250215203106114.png)
+
+
+
+
+#### 📍Python工具-JSINFO-SCAN
+
+- JSINFO-SCAN是一款对网站进行爬取，并且对网站中引入的JS进行信息搜集的一个工具。包括了swagger、druid目录扫描和手机号、身份证号敏感信息匹配。
+- 具体使用不做演示，和之前的项目类似
+- 【[GitHub JSINFO-SCAN](https://github.com/p1g3/JSINFO-SCAN)】
+
+
+
+#### 工具-FFUF
+
+- 功能强大的模糊化工具，用它来FUZZ模糊化JS文件
+- 【[GitHub ffuf】【[字典下载网站](https://wordlists.assetnote.io/)】
+- ffuf 是一个用 Go 语言编写的网络模糊测试工具，主要有以下用途：
+  1. 目录发现：ffuf 尝试从不同的路径和文件名来扫描 Web 服务器，从而发现隐藏的目录和文件。
+  2. 子域名枚举：通过 fuzzing 子域名，可以帮助发现目标域中的其他子域。
+  3. HTTP 方法扫描：测试不同的 HTTP 方法（GET、POST、PUT 等）。
+  4. 参数级模糊测试：通过针对 URL 中的特定参数进行更深入的挖掘，发现隐藏的漏洞。
+- ![image-20250215205823367](/img/ctfLearn/image-20250215205823367.png)
+
