记录本体项目代码修改部分

--- a/docs/views/numerology/2025-02-14-CTFLearn.md
+++ b/docs/views/numerology/2025-02-14-CTFLearn.md
@@ -46,9 +46,9 @@ publish: true
 
 # 第28章：信息打点-JS架构&框架识别&泄露提取&API接口枚举&FUZZ爬虫&插件项目
 
-### 案例演示-自动化项目分析
+## 案例演示-自动化项目分析
 
-#### 📍浏览器插件-FindSomething
+### 📍浏览器插件-FindSomething
 
 - FindSomething：基于浏览器插件的被动式信息提取工具
 
@@ -64,7 +64,7 @@ publish: true
 
 
 
-#### 📍Python工具-JSFinder
+### 📍Python工具-JSFinder
 
 - JSFinder是一个用于从网站的JavaScript文件中提取URL和子域名的工具。它支持简单爬取和深度爬取，可以指定保存结果的文件名。使用方法包括通过命令行输入URL进行爬取，或者读取包含URL或JS的文本文件。此外，还可以设置cookie爬取受保护的页面，并将结果分别保存到URL和子域名的文件中。返回结果为相对或绝对URL，取决于是否指定了JS文件。
 
@@ -82,7 +82,7 @@ publish: true
 
 
 
-#### 📍Go工具-URLFinder（JSFinder升级版）
+### 📍Go工具-URLFinder（JSFinder升级版）
 
 - URLFinder 是一款由 pingc0y 开发的开源项目，主要用于快速、全面地提取网页中的 JavaScript、URL 和敏感信息。该项目的主要编程语言是 Go，这使得它能够在多种操作系统上高效运行，包括 Windows、Linux 和 macOS。
 
@@ -104,7 +104,7 @@ publish: true
 
 
 
-#### 📍Python工具-JSINFO-SCAN
+### 📍Python工具-JSINFO-SCAN
 
 - JSINFO-SCAN是一款对网站进行爬取，并且对网站中引入的JS进行信息搜集的一个工具。包括了swagger、druid目录扫描和手机号、身份证号敏感信息匹配。
 - 具体使用不做演示，和之前的项目类似
@@ -112,14 +112,118 @@ publish: true
 
 
 
-#### 工具-FFUF
+### 📍工具-FFUF
 
 - 功能强大的模糊化工具，用它来FUZZ模糊化JS文件
-- 【[GitHub ffuf】【[字典下载网站](https://wordlists.assetnote.io/)】
+
+- 【[GitHub ffuf】
+
 - ffuf 是一个用 Go 语言编写的网络模糊测试工具，主要有以下用途：
   1. 目录发现：ffuf 尝试从不同的路径和文件名来扫描 Web 服务器，从而发现隐藏的目录和文件。
   2. 子域名枚举：通过 fuzzing 子域名，可以帮助发现目标域中的其他子域。
   3. HTTP 方法扫描：测试不同的 HTTP 方法（GET、POST、PUT 等）。
   4. 参数级模糊测试：通过针对 URL 中的特定参数进行更深入的挖掘，发现隐藏的漏洞。
+  
 - ![image-20250215205823367](/img/ctfLearn/image-20250215205823367.png)
+
+- **ffuf的使用：**
+
+  ```
+  ffuf.exe -w httparchive_js_2024_05_28.txt -u https://e-oss.longi.com:8014/FUZZ -mc all -fs 42 -c -v
+  ```
+
+  用ffuf来找到更多的JS文件，然后将列表保存到文件里，我们从这些js里找到更多的信息。
+
+> **推荐：**【[字典下载网站](https://wordlists.assetnote.io/)】
+>
+> 我们在打开网页的时候，是只能看到部分JS文件的，而剩下的部分需要用爆破的方式，找到这些JS。扫到更多的JS，我们就能从这些JS里找到更多的想要的信息。
+>
+> ![image-20250216204843983](/img/ctfLearn/image-20250216204843983.png)
+
+
+
+### 📍工具-Packer-Fuzzer
+
+- Webpack 是一个前端资源加载/打包工具。它将根据模块的依赖关系进行静态分析，然后将这些模块按照指定的规则生成对应的静态资源。
+
+- 【[GitHub Packer-Fuzzer](https://github.com/rtcatc/Packer-Fuzzer)】
+
+- 找一个符合Webpack技术的目标：【[目标地址](https://www.hopatcongairductcleaning.us/)】
+
+  ![image-20250216213740453](/img/ctfLearn/image-20250216213740453.png)
+
+  进入目标地址后，发现 Wappalyzer 显示了一个`杂项-Webpack`，这样就是用到了该打包器：
+
+  ![image-20250216214014920](/img/ctfLearn/image-20250216214014920.png)
+
+  JS项目很多时候会用到Webpack这个打包器，如果没有用到这个打包器，我们的Packer-Fuzzer工具是没有用的。
+
+- 工具使用教程请参考项目地址【[GitHub Packer-Fuzzer](https://github.com/rtcatc/Packer-Fuzzer)】
+
+  > 在使用工具时尝试用
+  >
+  > ```
+  > pip install -r requerment.txt
+  > ```
+  >
+  > 安装依赖时，发现需要升级pip版本，升级后pip直接丢失，尝试用
+  >
+  > ```
+  > python -m ensurepip
+  > ```
+  >
+  > 后，又出现了`ModuleNotFoundError: No module named 'pip._internal.cli.main'`的报错，这次按照【[完美解决ModuleNotFoundError: No module named ‘pip._internal.cli.main‘的报错-CSDN博客](https://blog.csdn.net/tsfy2003/article/details/140412748)】，下载get-pip.py文件：
+  >
+  > ```
+  > curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+  > ```
+  >
+  > 然后用清华源强制安装pip：
+  >
+  > ```
+  > python get-pip.py --no-cache-dir --force-reinstall --extra-index-url=https://pypi.tuna.tsinghua.edu.cn/simple
+  > ```
+  >
+  > 完成后，pip能正常运行，重新执行`pip install -r requerment.txt`命令并安装完成。
+  >
+  > 此时重新运行工具，发现新问题：`ImportError: cannot import name 'OxmlElement' from 'docx.oxml.xmlchemy' (D:\Python\python_381\lib\site-packages\docx\oxml\xmlchemy.py)`
+  >
+  > 找到相应解决办法【[Packer-Fuzzer软件安装初始python相关库的问题：No module named ‘node_vm2‘&&cannot import name ‘OxmlElement‘ from ‘d_importerror: cannot import name 'oxmlelement' from-CSDN博客](https://blog.csdn.net/wushangyu32335/article/details/135574085)】
+  >
+  > 先讲原本高版本的python-docx卸载，重新安装一个旧版的：
+  >
+  > ```
+  > pip uninstall python-docx
+  > pip install python-docx==0.8.11
+  > ```
+  >
+  > 成功解决问题并运行：
+  >
+  > ![image-20250216221128603](/img/ctfLearn/image-20250216221128603.png)
+
+- 我们用该工具抓取刚在fofa找到的网站：
+
+  ```
+  python PackerFuzzer.py -u http://cn.hjgz.cloud/
+  ```
+
+  ![image-20250216221852718](/img/ctfLearn/image-20250216221852718.png)
+
+  ![image-20250216222732316](/img/ctfLearn/image-20250216222732316.png)
+
+  像是这个网站，我们最后找到了一个AccessKey泄露的问题。
+
+
+
+## 实战演练
+
+### 准备
+
+确定【[目标站点- 萌购](https://www.030buy.net/)】
+
+![image-20250216223744235](/img/ctfLearn/image-20250216223744235.png)
+
+### 第一步-手工搜索
+
+在目标网站的F12开发者工具中，选择Sources，然后搜一些关键字：
 
