记录本体项目代码修改部分

--- a/docs/views/numerology/2025-02-13-CTFLearn.md
+++ b/docs/views/numerology/2025-02-13-CTFLearn.md
@@ -88,11 +88,7 @@ publish: true
 
 ### 什么是JS渗透测试？
 
-在JavaScript中也存在变量和函数，当存在可控变量及函数调用就可能会产生参数漏洞，JS开发的Web应用和PHP、Java、.NET等区别在于既没有源代码，也可以通过浏览器查看源代码获取真实的点，获取URL、获取JS敏感信息、获取代码传参等
-
-
-
-所以渗透JS开发的Web应用属于白盒测试（默认有源码参考），一般会在JS中寻找更多的URL地址，在JS代码逻辑（加密算法、APIkey配置、验证逻辑等）进行后期安全测试。
+==在JavaScript中也存在变量和函数，当存在可控变量及函数调用就可能会产生参数漏洞，JS开发的Web应用和PHP、Java、.NET等区别在于既没有源代码，也可以通过浏览器查看源代码获取真实的点，获取URL、获取JS敏感信息、获取代码传参等。所以渗透JS开发的Web应用属于白盒测试（默认有源码参考），一般会在JS中寻找更多的URL地址，在JS代码逻辑（加密算法、APIkey配置、验证逻辑等）进行后期安全测试。==
 
 
 
@@ -107,9 +103,11 @@ publish: true
 ### JS安全问题
 
 - 源码泄露
-- 未授权访问
-- 敏感Key泄露
-- API接口安全
+- 未授权访问-JS里面分析更多的URL访问确认接口路径
+- 敏感Key泄露-JS文件中可能配置了关键信息（云应用、短信、邮件、数据库等）
+- API接口安全-代码中加密提交、参数传递、更多的URL路径
+
+总结：JS的打点就是为了从JS中提取有用的路径、配置信息、我们需要的信息、理清代码的逻辑
 
 
 
@@ -121,9 +119,15 @@ Vue、NodeJS、Jquery、Angular等
 
 ### 如何判定JS开发应用？
 
-我们用Wappalyzer插件查看网站是用什么语言开发的。
+我们用Wappalyzer插件查看网站是用什么语言、技术开发的。
 
 ![image-20250213202854641](/img/ctfLearn/image-20250213202854641.png)
+
+- 插件Wappalyzer
+- 识别源程序代码
+- 引入多个JS文件
+- 一般有/static/js/app.js等文件
+- 一般cookie中有connect.sid
 
 
 
@@ -191,7 +195,7 @@ Vue.js：核心功能采用框架语法（JS）传输、接受数据
 
 ### 案例演示-半自动Burp分析
 
-#### 📍自带功能：Target->sitemap->Engagement Tools->Find Scripts
+#### 📍BurpSuite自带功能：Target->sitemap->Engagement Tools->Find Scripts
 
 我们的目标是：【[地址](https://144.0.6.30/login.html)】
 
