--- a/docs/views/numerology/2025-02-14-CTFLearn.md
+++ b/docs/views/numerology/2025-02-14-CTFLearn.md
@@ -66,6 +66,8 @@ publish: true
 
 ### 📍Python工具-JSFinder
 
+- 从JS中提取URL或者敏感数据
+
 - JSFinder是一个用于从网站的JavaScript文件中提取URL和子域名的工具。它支持简单爬取和深度爬取，可以指定保存结果的文件名。使用方法包括通过命令行输入URL进行爬取，或者读取包含URL或JS的文本文件。此外，还可以设置cookie爬取受保护的页面，并将结果分别保存到URL和子域名的文件中。返回结果为相对或绝对URL，取决于是否指定了JS文件。
 
 - ![image-20250215195643042](/img/ctfLearn/image-20250215195643042.png)
@@ -84,6 +86,8 @@ publish: true
 
 ### 📍Go工具-URLFinder（JSFinder升级版）
 
+- 从JS中提取URL或者敏感数据
+
 - URLFinder 是一款由 pingc0y 开发的开源项目，主要用于快速、全面地提取网页中的 JavaScript、URL 和敏感信息。该项目的主要编程语言是 Go，这使得它能够在多种操作系统上高效运行，包括 Windows、Linux 和 macOS。
 
 - ![image-20250215202131774](/img/ctfLearn/image-20250215202131774.png)
@@ -97,6 +101,7 @@ publish: true
   ```
 
   ![image-20250215202758979](/img/ctfLearn/image-20250215202758979.png)
+  
 - 这个工具好用的地方就是在这个会有颜色标识。像是以下图中是返回的标题是“安全中心”，如果说有不是安全中心的，说明就是挖到了：
 
   ![image-20250215203106114](/img/ctfLearn/image-20250215203106114.png)
@@ -106,6 +111,7 @@ publish: true
 
 ### 📍Python工具-JSINFO-SCAN
 
+- 从JS中提取URL或者敏感数据
 - JSINFO-SCAN是一款对网站进行爬取，并且对网站中引入的JS进行信息搜集的一个工具。包括了swagger、druid目录扫描和手机号、身份证号敏感信息匹配。
 - 具体使用不做演示，和之前的项目类似
 - 【[GitHub JSINFO-SCAN](https://github.com/p1g3/JSINFO-SCAN)】
@@ -115,6 +121,8 @@ publish: true
 ### 📍工具-FFUF
 
 - 功能强大的模糊化工具，用它来FUZZ模糊化JS文件
+
+- 该工具就是为了找到更多的JS文件来分析更多的信息
 
 - 【[GitHub ffuf】
 
@@ -223,7 +231,36 @@ publish: true
 
 ![image-20250216223744235](/img/ctfLearn/image-20250216223744235.png)
 
+确定框架为Vue这种类JS的框架：
+
+![image-20250217200113080](/img/ctfLearn/image-20250217200113080.png)
+
 ### 第一步-手工搜索
 
-在目标网站的F12开发者工具中，选择Sources，然后搜一些关键字：
+在目标网站的F12开发者工具中，选择Sources，然后搜一些关键字，比如`privatekey`等：
 
+![image-20250217200352296](/img/ctfLearn/image-20250217200352296.png)
+
+### 第二步-自动化分析
+
+查看我们的FindSomething插件，查看具体有什么信息泄露：
+
+![image-20250217200641030](/img/ctfLearn/image-20250217200641030.png)
+
+视频展示的萌站的版本，用的是阿里云、腾讯云，在这一步中泄露了这些云服务的Key信息。
+
+
+
+### 课程目的
+
+解决以下问题：
+
+1. 如何从表现中的JS提取有价值的信息
+2. 如何从地址中用FUZZ提取未知的JS文件
+3. 如何从JS开放框架WebPack进行测试
+
+
+
+## 思维导图
+
+![image-20250217230001455.png](/img/ctfLearn/image-20250217230001455.png)
