--- a/docs/views/numerology/2025-02-15-CTFLearn.md
+++ b/docs/views/numerology/2025-02-15-CTFLearn.md
@@ -37,7 +37,7 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第82天
 
-今日内容：信息打点-JS架构&框架识别&泄露提取&API接口枚举&FUZZ爬虫&插件项目
+今日内容：信息打点-主机架构&蜜罐识别&WAF识别&端口扫描&协议识别&服务安全
 
 [[toc]]
 
@@ -45,5 +45,67 @@ publish: true
 
 <!-- more -->
 
-# 第28章：信息打点-JS架构&框架识别&泄露提取&API接口枚举&FUZZ爬虫&插件项目
+# 第29章：信息打点-主机架构&蜜罐识别&WAF识别&端口扫描&协议识别&服务安全
+
+
+
+### 今日内容
+
+- Web服务器：Apache、Nginx、IIS、lighttpd等
+- 应用服务器：Tomcat、Jbose、WebLogic、WebSphere等
+- 数据库类型：MySQL、SqlServer、Oracle、Radis、MongoDB等
+- 操作系统信息：Linux、Windows等
+- CDN信息：帝联、Cloudflare、网宿、七牛云、阿里云等
+- WAF信息：创宇盾、宝塔、ModSecurity、玄武盾、OpenRASP等
+- 蜜罐信息：HFish、TeaPot、T-Pot、Glastopf等
+- 其他组件信息：fastjson、shiro、log4j、OA办公等
+
+
+
+## 知识点
+
+- 识别-Web服务器-请求返回包
+- 识别-应用服务器-端口扫描技术
+- 识别-其他服务协议-端口扫描技术
+- 识别-WAF防火墙-看图&项目&指纹
+- 识别-蜜罐平台-人工&网络空间&项目
+
+
+
+### 知识点解释
+
+关于Web服务器，我们之前举的例子是Apache之类的，而其实这些东西和Tomcat、Jboss等应用服务器统称为中间件。
+
+**为什么有些是Web服务器，而有些是应用服务器呢？**
+
+应用服务器有个显著的特点：具有端口服务的开放
+
+像是Apache、Nginx、IIS、lighttpd等，Apache是默认解析80端口，是网站协议的端口。像是Tomcat、Jboss这些，默认服务是启动软件本身的一个端口，如果上边有网站，还会有一个端口。
+
+如果我们用的Java，那我们用IIS或者其他的Web服务器，就很麻烦，而我们如果用Tomcat，这就很简单。
+
+简单来说，这就是针对不同应用的，就是因为语言的不同特性决定的，所以应用服务器、Web服务器的不一样。
+
+
+
+## 识别-Web服务器-请求返回包
+
+Apache、Nginx(反向代理服务器)、IIS、lighttpd等。
+
+Web服务器主要用于提供静态内容，如HTML、CSS和JavaScript等，以及处理对这些内容的HTTP请求。Web服务器通常使用HTTP协议来与客户端通信，以便在浏览器中呈现网页。一些常见的Web服务器软件包括Apache、Nginx和Microsoft IIS等。
+
+> 一般与80、443端口有关
+
+
+
+## 识别-应用服务器-端口扫描技术	
+
+Tomcat、Jbose、WebLogic、WebSphare等。
+
+应用服务器主要用于提供动态内容，如数据库查询和Web应用程序逻辑等，通常与Web服务器协同工作。
+
+应用服务器通常使用专有协议与客户端通信，以便执行更复杂的操作和提供更高级的功能。一些常见的应用服务器软件包括Tomcat、Node.js和JBoss等。
+
+> 一般应用服务器有自己的端口，比如Tomcat的8080、WebLogic的7001等
+
 
