记录本体项目代码修改部分

--- a/docs/views/numerology/2025-02-15-CTFLearn.md
+++ b/docs/views/numerology/2025-02-15-CTFLearn.md
@@ -49,7 +49,7 @@ publish: true
 
 
 
-### 今日内容
+## 今日内容
 
 - Web服务器：Apache、Nginx、IIS、lighttpd等
 - 应用服务器：Tomcat、Jbose、WebLogic、WebSphere等
@@ -72,7 +72,7 @@ publish: true
 
 
 
-### 知识点解释
+## 知识点解释
 
 关于Web服务器，我们之前举的例子是Apache之类的，而其实这些东西和Tomcat、Jboss等应用服务器统称为中间件。
 
@@ -86,9 +86,15 @@ publish: true
 
 简单来说，这就是针对不同应用的，就是因为语言的不同特性决定的，所以应用服务器、Web服务器的不一样。
 
+二者通常配合使用，以达到更好的效果。
+
 
 
 ## 识别-Web服务器-请求返回包
+
+
+
+### Web服务器
 
 Apache、Nginx(反向代理服务器)、IIS、lighttpd等。
 
@@ -96,9 +102,15 @@ Web服务器主要用于提供静态内容，如HTML、CSS和JavaScript等，以
 
 > 一般与80、443端口有关
 
+![image-20250219210050469](/img/ctfLearn/image-20250219210050469.png)
+
 
 
 ## 识别-应用服务器-端口扫描技术	
+
+
+
+### 应用服务器
 
 Tomcat、Jbose、WebLogic、WebSphare等。
 
@@ -109,3 +121,63 @@ Tomcat、Jbose、WebLogic、WebSphare等。
 > 一般应用服务器有自己的端口，比如Tomcat的8080、WebLogic的7001等
 
 
+
+### 端口扫描技术
+
+软件：Nmap（老牌安全工具）、Masscan（新兴软件）、网络空间（被动搜集，区别于其他的主动搜集）
+
+> 被动搜集：没有做任何事情，通过网上的一些接口、平台网站、去查对方的信息，由别人帮你查。
+>
+> 主动搜集：从你自己通过一些工具或流量，发送给对方，根据对方的回应判断信息的情况。
+
+
+
+### 案例演示-Nmap
+
+我们这里演示的是Windows版本，用的是图形化界面，更方便一些：
+
+![image-20250219225036806](/img/ctfLearn/image-20250219225036806.png)
+
+这里图中显示的两种状态`close`和`open`，此外，还会有另外一种`fliter`意思是过滤。
+
+【[使用参考1](https://blog.csdn.net/qq_53079406/article/details/125266331)】【[使用参考2](https://blog.csdn.net/qq_53079406/article/details/125263917)】
+
+
+
+### 案例演示-MapScan
+
+我们从官方下载下来的代码是没有编译的，我们需要用Visual Studio编译一下【[编译教程](https://www.cnblogs.com/lzy575566/p/15513726.html)】
+
+该工具需要用cmd命令来使用：
+
+![image-20250219224719912](/img/ctfLearn/image-20250219224719912.png)
+
+我们也可以扫描多个端口，这个扫描的速度要比nmap要快一些：
+
+![image-20250219225400306](/img/ctfLearn/image-20250219225400306.png)
+
+我们可以扫描所有端口，具体命令是`masscan.exe -p1-65535 47.96.88.47`，这样扫描比较慢：
+
+![image-20250219225816362](/img/ctfLearn/image-20250219225816362.png)
+
+这些参数没有必要记忆，需要用的时候翻一下怎么用就可以了：
+
+![image-20250219230031828](/img/ctfLearn/image-20250219230031828.png)
+
+
+
+### 案例演示-网络空间
+
+网络空间是我们之前在信息搜集阶段常用的几个网站，【[FOFA](https://fofa.info/)】【[全球鹰](http://hunter.qianxin.com/)】【[360quake](https://quake.360.cn/quake/)】
+
+在这些网站上直接搜IP地址，就能得到目标信息：
+
+![image-20250219230611816](/img/ctfLearn/image-20250219230611816.png)
+
+这样搜到目标后，我们点击端口聚合，就能得到如下页面：
+
+![image-20250219230642850](/img/ctfLearn/image-20250219230642850.png)
+
+该页面即显示目标开放的端口，如443、80、3306等
+
+**缺点：**这个网络空间是慢慢爬出来的，所以信息可能存在滞后。
