记录本体项目代码修改部分

--- a/docs/views/numerology/2025-02-15-CTFLearn.md
+++ b/docs/views/numerology/2025-02-15-CTFLearn.md
@@ -256,4 +256,30 @@ FTP、SSH、RDP、SMB、SMTP、LDAF、Rsync等
 
 - 像是Linux的远程连接服务器是SSH，除此之外还有个文件传输服务器FTP，邮件服务SMTP协议。
 
-- 除了网站应用外，还会有一些其他的服务，就像以上说的这些都是
+- 除了网站应用外，还会有一些其他的服务，就像以上说的这些都是应用服务。
+
+
+
+针对以上这些端口，有些是端口的漏洞、弱口令等各种各样的问题，用这些默认端口的话，可能会导致一些安全问题。
+
+端口扫描的意义就在于，除了Web服务协议上的一些攻防之外，还有一些其他的服务协议的安全攻防，而且面对各个服务器扮演的角色，比如邮件服务器、FTP文件服务器等，让我们明白我们面对的目标是做什么的。
+
+当信息了解的足够多以后，我们的思路就会更多。
+
+
+
+我们在端口扫描后，可以查看目标的各种信息，包括猜测的系统信息等：
+
+![image-20250225214516423](/img/ctfLearn/image-20250225214516423.png)
+
+> 这个软件有点问题，每次扫描以后不能重新再次扫描，只能关闭后再打开后扫描。还要等全部扫描完以后再切换页面。
+
+我们尝试用Nmap扫描其他IP地址，如`47.75.212.155`同时我们用网络空间的方法来搜一下目标地址：
+
+![image-20250225220353529](/img/ctfLearn/image-20250225220353529.png)
+
+![image-20250225220433196](/img/ctfLearn/image-20250225220433196.png)
+
+![image-20250225220544108](/img/ctfLearn/image-20250225220544108.png)
+
+![image-20250225220605515](/img/ctfLearn/image-20250225220605515.png)
